# click-loguru-db

./: LICENSE  Makefile  README.md  dbc.toml  pycli.toml  pyproject.toml
src/: __init__.py  _main.py  build.py  check.py  deploy.py  env.py  main.py  path.py  slides.py  utils_init.py  verify.py
src/cli1/: __init__.py  cli1.py
src/deploy/: __init__.py  deploy.py
tests/: test_check.py
